# gazebo_ros_four_wheel_steering

./: .gitignore  CMakeLists.txt  README.md  package.xml
env-hooks/: gazebo_ros_four_wheel_steering.dsv.in
include/gazebo_ros_four_wheel_steering/: plugin.hpp
src/: controller.cpp  controller.hpp  joint.cpp  joint.hpp  odometry.cpp  odometry.hpp  plugin.cpp  vehicle.hpp
test/: test_plugin.cpp
test/models/gazebo_ros_four_wheel_steering_test_vehicle/: model.config  model.urdf  model.urdf.xacro  wheel.urdf.xacro
test/worlds/: gazebo_ros_four_wheel_steering.world  kingpin.world  kingpin.world.erb  kingpin_manual.world
urdf/: axle.urdf.xacro  four_wheel_steering.urdf.xacro  inertia_tensors.sdf.xacro  inertia_tensors.urdf.xacro  primitives.sdf.xacro  primitives.urdf.xacro  steering_rod.sdf.xacro  wheel_steered.urdf.xacro
